compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__externals__discarded_names_in_external_are_passed_correctly.snap
---
source: compiler-core/src/javascript/tests/externals.rs
expression: "\n@external(javascript, \"wibble\", \"wobble\")\npub fn woo(_ignored: a) -> Nil\n"
---
import { wobble as woo } from "wibble";

export { woo };
