compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__externals__external_type_typescript.snap
---
source: compiler-core/src/javascript/tests/externals.rs
expression: "pub type Queue(a)\n\n@external(javascript, \"queue\", \"new\")\npub fn new() -> Queue(a)\n"
---
declare const __brand_Queue: unique symbol;
type Queue = { [__brand_Queue]: void };

export type Queue$<I> = Queue;

export function new$(): Queue$<any>;
