compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__externals__global_fn.snap
---
source: compiler-core/src/javascript/tests/externals.rs
assertion_line: 25
expression: "external fn down(Float) -> Float = \"\" \"Math.floor\""
---
function down(arg0) {
  return Math.floor(arg0)
}

