compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__externals__module_fn.snap
---
source: compiler-core/src/javascript/tests/externals.rs
expression: "\n@external(javascript, \"utils\", \"inspect\")\nfn show(x: anything) -> Nil"
---
----- SOURCE CODE

@external(javascript, "utils", "inspect")
fn show(x: anything) -> Nil

----- COMPILED JAVASCRIPT
import { inspect as show } from "utils";
