compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__externals__no_body.snap
---
source: compiler-core/src/javascript/tests/externals.rs
expression: "\n@external(javascript, \"one\", \"one\")\npub fn one(x: Int) -> Int\n"
---
----- SOURCE CODE

@external(javascript, "one", "one")
pub fn one(x: Int) -> Int


----- COMPILED JAVASCRIPT
import { one } from "one";

export { one };
