compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__externals__pub_global_fn.snap
---
source: compiler-core/src/javascript/tests/externals.rs
assertion_line: 30
expression: "pub external fn down(Float) -> Float = \"\" \"Math.floor\""
---
export function down(arg0) {
  return Math.floor(arg0)
}

