compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__externals__pub_global_fn_typescript.snap
---
source: compiler-core/src/javascript/tests/externals.rs
expression: "pub external fn down(Float) -> Float = \"\" \"Math.floor\""
---
export function down(x0: number): number;

