compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__externals__pub_module_fn_typescript.snap
---
source: compiler-core/src/javascript/tests/externals.rs
assertion_line: 28
expression: "\n@external(javascript, \"utils\", \"inspect\")\npub fn show(x: anything) -> Nil"
---
export function show(x: any): undefined;
