compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__externals__same_name_global_external.snap
---
source: compiler-core/src/javascript/tests/externals.rs
assertion_line: 40
expression: "pub external fn fetch(Nil) -> Nil = \"\" \"fetch\""
---
export function fetch(arg0) {
  return globalThis.fetch(arg0)
}

